[package]
name = "webrtc-session"
version = "0.1.0"
authors = ["Paul <paul@paul-mayer.eu>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
cfg-if = "1.0.0"
worker = "0.0.9"
serde_json = "1.0.81"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
wee_alloc = { version = "0.4.5", optional = true }
serde = "1.0.137"
handlebars = "4.2.2"
lazy_static = "1.4.0"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
